many more fixes
1. poza echipa cropped
2. de reparat numere rezultate
3. de redimensionat poza cu echipa
4. meniul cu navbar pe telefon de fixat ca e retardat
padding top la rezultate pe telefon
5. reparat dimensiunile pozelor de la rezultate
6. reordonat liderii

--- a/en/echipa.html
+++ b/en/echipa.html
@@ -141,7 +141,7 @@
     <section class="about-us">
       <div class="container-a">
         <div class="image-a">
-          <img src="../assets/images/Echipa/IMG_0437.JPG" alt="" />
+          <img src="../assets/images/Echipa/IMG_0437(1).JPG" alt="" />
         </div>
       </div>
     </section>
@@ -161,19 +161,55 @@
       </div>
       <div class="item-links">
         <span class="item-link item-membru menu-active" data-name="all">All members</span>
-        <span class="item-link item-membru" data-name="mecanica">Robot building</span>
-        <span class="item-link item-membru" data-name="programare">Programming</span>
         <span class="item-link item-membru" data-name="grafica">PR & Marketing</span>
         <span class="item-link item-membru" data-name="pr">Graphics Design</span>
+        <span class="item-link item-membru" data-name="mecanica">Robot building</span>
+        <span class="item-link item-membru" data-name="programare">Programming</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <!-- Membru 1 -->
+        <div class="box box-membru" data-name="grafica">
+          <img src="../assets/images/Membri/Irina Nicolescu.JPG" alt="" />
+          <h2>Irina Nicolescu</h2>
+          <span>PR & Marketing Leader</span>
+        </div>
+        <!-- Membru 2 -->
+        <div class="box box-membru" data-name="pr">
+          <img src="../assets/images/Membri/Iasmina Petcu.JPG" alt="" />
+          <h2>Iasmina Petcu</h2>
+          <span>Graphics design Leader</span>
+        </div>
+        <!-- Membru 1 -->
         <div class="box box-membru" data-name="mecanica">
           <img src="../assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
           <h2>Lucian Bobîrsc</h2>
           <span>Robot building Leader</span>
+        </div>
+        <!-- Membru 5 -->
+        <div class="box box-membru" data-name="programare">
+          <img src="../assets/images/Membri/Bogdan Grecu.JPG" alt="" />
+          <h2>Bogdan Grecu</h2>
+          <span>Programming Leader</span>
+        </div>
+        <!-- Membru 7 -->
+        <div class="box box-membru" data-name="grafica">
+          <img src="../assets/images/Membri/Catinca Drăghiescu.JPG" alt="" />
+          <h2>Catinca Drăghiescu</h2>
+          <span>PR & Marketing</span>
+        </div>
+        <!-- Membru 8 -->
+        <div class="box box-membru" data-name="grafica">
+          <img src="../assets/images/Membri/Denisa Ionescu.JPG" alt="" />
+          <h2>Denisa Ionescu</h2>
+          <span>PR & Marketing</span>
+        </div>
+        <!-- Membru 10 -->
+        <div class="box box-membru" data-name="pr">
+          <img src="../assets/images/Membri/Maria Răducanu.JPG" alt="" />
+          <h2>Maria Răducanu</h2>
+          <span>Graphics design</span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-membru" data-name="mecanica">
@@ -193,42 +229,6 @@
           <h2>Robert Ciocan </h2>
           <span>Robot building</span>
         </div>
-        <!-- Membru 5 -->
-        <div class="box box-membru" data-name="programare">
-          <img src="../assets/images/Membri/Bogdan Grecu.JPG" alt="" />
-          <h2>Bogdan Grecu</h2>
-          <span>Programming Leader</span>
-        </div>
-        <!-- Membru 6 -->
-        <div class="box box-membru" data-name="grafica">
-          <img src="../assets/images/Membri/Irina Nicolescu.JPG" alt="" />
-          <h2>Irina Nicolescu</h2>
-          <span>PR & Marketing Leader</span>
-        </div>
-        <!-- Membru 7 -->
-        <div class="box box-membru" data-name="grafica">
-          <img src="../assets/images/Membri/Catinca Drăghiescu.JPG" alt="" />
-          <h2>Catinca Drăghiescu</h2>
-          <span>PR & Marketing</span>
-        </div>
-        <!-- Membru 8 -->
-        <div class="box box-membru" data-name="grafica">
-          <img src="../assets/images/Membri/Denisa Ionescu.JPG" alt="" />
-          <h2>Denisa Ionescu</h2>
-          <span>PR & Marketing</span>
-        </div>
-        <!-- Membru 9 -->
-        <div class="box box-membru" data-name="pr">
-          <img src="../assets/images/Membri/Iasmina Petcu.JPG" alt="" />
-          <h2>Iasmina Petcu</h2>
-          <span>Graphics design Leader</span>
-        </div>
-        <!-- Membru 10 -->
-        <div class="box box-membru" data-name="pr">
-          <img src="../assets/images/Membri/Maria Răducanu.JPG" alt="" />
-          <h2>Maria Răducanu</h2>
-          <span>Graphics design</span>
-        </div>
       </div>
     </div>
 
@@ -239,34 +239,14 @@
       </div>
       <div class="item-links">
         <span class="item-link item-voluntar menu-active-v" data-name="all-v">All volunteers</span>
-        <span class="item-link item-voluntar" data-name="mecanica-v">Robot building</span>
-        <span class="item-link item-voluntar" data-name="programare-v">Programming</span>
         <span class="item-link item-voluntar" data-name="pr-v">PR & Marketing</span>
         <span class="item-link item-voluntar" data-name="grafica-v">Graphics design</span>
+        <span class="item-link item-voluntar" data-name="mecanica-v">Robot building</span>
+        <span class="item-link item-voluntar" data-name="programare-v">Programming</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
-        <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="../assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
-          <h2>Rareș Călugăru</h2>
-          <span>Robot building Volunteer</span>
-        </div>
-        <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="../assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
-          <h2>Răzvan Dragomir</h2>
-          <span>Robot building Volunteer</span>
-        </div>
-        <div class="box box-voluntar" data-name="programare-v">
-          <img src="../assets/images/Voluntari/Filip Tiron.JPG" alt="" />
-          <h2>Filip Tiron</h2>
-          <span>Programming Volunteer</span>
-        </div>
-        <div class="box box-voluntar" data-name="programare-v">
-          <img src="../assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
-          <h2>Alexandru Țigău</h2>
-          <span>Programming Volunteer</span>
-        </div>
         <div class="box box-voluntar" data-name="pr-v">
           <img src="../assets/images/Voluntari/Maya Danilov.JPG" alt="" />
           <h2>Maya Danilov</h2>
@@ -291,6 +271,26 @@
           <img src="../assets/images/Voluntari/Oana Ursache.JPG" alt="" />
           <h2>Oana Ursache</h2>
           <span>Graphics design Volunteer</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="../assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
+          <h2>Rareș Călugăru</h2>
+          <span>Robot building Volunteer</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="../assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
+          <h2>Răzvan Dragomir</h2>
+          <span>Robot building Volunteer</span>
+        </div>
+        <div class="box box-voluntar" data-name="programare-v">
+          <img src="../assets/images/Voluntari/Filip Tiron.JPG" alt="" />
+          <h2>Filip Tiron</h2>
+          <span>Programming Volunteer</span>
+        </div>
+        <div class="box box-voluntar" data-name="programare-v">
+          <img src="../assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
+          <h2>Alexandru Țigău</h2>
+          <span>Programming Volunteer</span>
         </div>
       </div>
     </div>
