--- a/echipa.html
+++ b/echipa.html
@@ -142,7 +142,7 @@
     <section class="about-us">
       <div class="container-a">
         <div class="image-a">
-          <img src="assets/images/Echipa/IMG_0437.JPG" alt="" />
+          <img src="assets/images/Echipa/IMG_0437(1).JPG" alt="" />
         </div>
       </div>
     </section>
@@ -162,73 +162,73 @@
       </div>
       <div class="item-links">
         <span class="item-link item-membru menu-active" data-name="all">Toți membrii</span>
-        <span class="item-link item-membru" data-name="mecanica">Mecanică</span>
-        <span class="item-link item-membru" data-name="programare">Programare</span>
         <span class="item-link item-membru" data-name="grafica">PR & Marketing</span>
         <span class="item-link item-membru" data-name="pr">Grafică</span>
+        <span class="item-link item-membru" data-name="mecanica">Mecanică</span>
+        <span class="item-link item-membru" data-name="programare">Programare</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <!-- Membru 1 -->
-        <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
-          <h2>Lucian Bobîrsc</h2>
-          <span>Lider Mecanică</span>
-        </div>
-        <!-- Membru 2 -->
-        <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Matei Neamțu.JPG" alt="" />
-          <h2>Matei Neamțu</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 3 -->
-        <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Călin Tudor.JPG" alt="" />
-          <h2>Călin Tudor</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 4 -->
-        <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Robert Ciocan.JPG" alt="" />
-          <h2>Robert Ciocan </h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 5 -->
-        <div class="box box-membru" data-name="programare">
-          <img src="assets/images/Membri/Bogdan Grecu.JPG" alt="" />
-          <h2>Bogdan Grecu</h2>
-          <span>Lider Programare</span>
-        </div>
-        <!-- Membru 6 -->
         <div class="box box-membru" data-name="grafica">
           <img src="assets/images/Membri/Irina Nicolescu.JPG" alt="" />
           <h2>Irina Nicolescu</h2>
           <span>Lider PR & Marketing</span>
         </div>
+        <!-- Membru 2 -->
+        <div class="box box-membru" data-name="pr">
+          <img src="assets/images/Membri/Iasmina Petcu.JPG" alt="" />
+          <h2>Iasmina Petcu</h2>
+          <span>Lider Grafică</span>
+        </div>
+        <!-- Membru 3 -->
+        <div class="box box-membru" data-name="mecanica">
+          <img src="assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
+          <h2>Lucian Bobîrsc</h2>
+          <span>Lider Mecanică</span>
+        </div>
         <!-- Membru 7 -->
+        <div class="box box-membru" data-name="programare">
+          <img src="assets/images/Membri/Bogdan Grecu.JPG" alt="" />
+          <h2>Bogdan Grecu</h2>
+          <span>Lider Programare</span>
+        </div>
+        <!-- Membru 8 -->
         <div class="box box-membru" data-name="grafica">
           <img src="assets/images/Membri/Catinca Drăghiescu.JPG" alt="" />
           <h2>Catinca Drăghiescu</h2>
           <span>PR & Marketing</span>
         </div>
-        <!-- Membru 8 -->
+        <!-- Membru 9 -->
         <div class="box box-membru" data-name="grafica">
           <img src="assets/images/Membri/Denisa Ionescu.JPG" alt="" />
           <h2>Denisa Ionescu</h2>
           <span>PR & Marketing</span>
-        </div>
-        <!-- Membru 9 -->
-        <div class="box box-membru" data-name="pr">
-          <img src="assets/images/Membri/Iasmina Petcu.JPG" alt="" />
-          <h2>Iasmina Petcu</h2>
-          <span>Lider Grafică</span>
         </div>
         <!-- Membru 10 -->
         <div class="box box-membru" data-name="pr">
           <img src="assets/images/Membri/Maria Răducanu.JPG" alt="" />
           <h2>Maria Răducanu</h2>
           <span>Grafică</span>
+        </div>
+        <!-- Membru 4 -->
+        <div class="box box-membru" data-name="mecanica">
+          <img src="assets/images/Membri/Matei Neamțu.JPG" alt="" />
+          <h2>Matei Neamțu</h2>
+          <span>Mecanică</span>
+        </div>
+        <!-- Membru 5 -->
+        <div class="box box-membru" data-name="mecanica">
+          <img src="assets/images/Membri/Călin Tudor.JPG" alt="" />
+          <h2>Călin Tudor</h2>
+          <span>Mecanică</span>
+        </div>
+        <!-- Membru 6 -->
+        <div class="box box-membru" data-name="mecanica">
+          <img src="assets/images/Membri/Robert Ciocan.JPG" alt="" />
+          <h2>Robert Ciocan </h2>
+          <span>Mecanică</span>
         </div>
       </div>
     </div>
@@ -240,34 +240,14 @@
       </div>
       <div class="item-links">
         <span class="item-link item-voluntar menu-active-v" data-name="all-v">Toți voluntarii</span>
-        <span class="item-link item-voluntar" data-name="mecanica-v">Mecanică</span>
-        <span class="item-link item-voluntar" data-name="programare-v">Programare</span>
         <span class="item-link item-voluntar" data-name="pr-v">PR & Marketing</span>
         <span class="item-link item-voluntar" data-name="grafica-v">Grafică</span>
+        <span class="item-link item-voluntar" data-name="mecanica-v">Mecanică</span>
+        <span class="item-link item-voluntar" data-name="programare-v">Programare</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
-        <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
-          <h2>Rareș Călugăru</h2>
-          <span>Voluntar Mecanică</span>
-        </div>
-        <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
-          <h2>Răzvan Dragomir</h2>
-          <span>Voluntar Mecanică</span>
-        </div>
-        <div class="box box-voluntar" data-name="programare-v">
-          <img src="assets/images/Voluntari/Filip Tiron.JPG" alt="" />
-          <h2>Filip Tiron</h2>
-          <span>Voluntar Programare</span>
-        </div>
-        <div class="box box-voluntar" data-name="programare-v">
-          <img src="assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
-          <h2>Alexandru Țigău</h2>
-          <span>Voluntar Programare</span>
-        </div>
         <div class="box box-voluntar" data-name="pr-v">
           <img src="assets/images/Voluntari/Maya Danilov.JPG" alt="" />
           <h2>Maya Danilov</h2>
@@ -292,6 +272,26 @@
           <img src="assets/images/Voluntari/Oana Ursache.JPG" alt="" />
           <h2>Oana Ursache</h2>
           <span>Voluntar Grafică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
+          <h2>Rareș Călugăru</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
+          <h2>Răzvan Dragomir</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="programare-v">
+          <img src="assets/images/Voluntari/Filip Tiron.JPG" alt="" />
+          <h2>Filip Tiron</h2>
+          <span>Voluntar Programare</span>
+        </div>
+        <div class="box box-voluntar" data-name="programare-v">
+          <img src="assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
+          <h2>Alexandru Țigău</h2>
+          <span>Voluntar Programare</span>
         </div>
       </div>
     </div>
