--- a/formular.html
+++ b/formular.html
@@ -54,6 +54,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> <!-- jQuery -->
 
     <title> Zenith </title>
+    <script src = './assets/js/lang.js'></script> 
     
     <style>
       /* .goog-te-banner-frame.skiptranslate {
