--- a/formular.html
+++ b/formular.html
@@ -116,7 +116,7 @@
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class = 'nav-item'>
                   <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
-                    Language
+                    Limbă
                   </a>
                   <div class = 'language-dropdown'>
                       <a class = 'lang-link' onclick = 'changelang("ro", "formular.html")'>RO</a>
