--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class = 'nav-item'>
                 <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
-                  Language
+                  Limbă
                 </a>
                 <div class = 'language-dropdown'>
                     <a class = 'lang-link' onclick = 'changelang("ro", "index.html")'>RO</a>
