translated other articles

--- a/blog.html
+++ b/blog.html
@@ -303,7 +303,7 @@
                 <br />&emsp;Am organizat, alături de <b>Robo-Sapiens #19117</b>, <b>Gamma #15991</b>, <b>Brave Bots #19141</b>, <b>AstraDynamix #24964</b>, 
                 <b>Soft Hoarders #12560</b> și <b>AlphaBit #19120</b>, meciuri demonstrative pentru vizitatori, arătând live cum se desfășoară 
                 un meci de FTC al sezonului Into The Deep și frumusețea roboticii la nivelul competițiilor pentru tineri. 
-                <br /><br />&emsp;Mulțumim, Universum, Bucharest Tech Week și Romexpo, pentru organizarea acestui eveniment și 
+                <br /><br />&emsp;Mulțumim Universum, Bucharest Tech Week și Romexpo, pentru organizarea acestui eveniment și 
                 pentru șansa oferită de a ne împărtăși cunoștințele despre STEM și First Tech Challenge cu publicul larg!
               </span>
             </p>
@@ -352,8 +352,9 @@
             <span>30 mai - 1 iunie 2025</span>
             <h4 class="blog-title">West Side Flower Fest</h4>
             <p class="text">
-              &emsp;În perioada 30 mai-1 iunie 2025, am avut prilejul de a participa la festivalul „West Side Flower Fest", organizat de Primăria Sectorului 6 în Parcul Moghioroș-Drumul Taberei, festival ce s-a axat, în principal, pe magia naturii îngemănată cu spectacolul pe care omul îl poate face în comuniune cu aceasta.
-
+              &emsp;În perioada 30 mai-1 iunie 2025, am avut prilejul de a participa la festivalul „West Side Flower Fest", 
+              organizat de Primăria Sectorului 6 în Parcul Moghioroș-Drumul Taberei, festival ce s-a axat, în principal, 
+              pe magia naturii îngemănată cu spectacolul pe care omul îl poate face în comuniune cu aceasta.
               <span class="read-more-text">
                 <br />&emsp;Cu acest gând în minte, echipa noastră s-a pregătit temeinic pentru a oferi vizitatorilor 
                 o experiență de neuitat în domeniul vast al roboticii și științelor STEM, în același timp păstrând vie grija 
