--- a/en/blog.html
+++ b/en/blog.html
@@ -117,7 +117,7 @@
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="formular.html">Contact us</a>
               </li>
-              <li>
+              <li class="nav-item">
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
                   <i id="theme-icon"></i>
                 </button>
