--- a/en/formular.html
+++ b/en/formular.html
@@ -148,7 +148,7 @@
                     aria-current="page"
                     href="formular.html">Contact us</a>
                 </li>
-                <li>
+                <li class="nav-item">
                   <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
                     <i id="theme-icon"></i>
                   </button>
