--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             ></button>
           </div>
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
               <li class = 'nav-item'>
                 <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
                   Limbă
@@ -119,7 +119,7 @@
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
               </li>
-              <li>
+              <li class="nav-item">
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
                   <i id="theme-icon"></i>
                 </button>
