--- a/rezultate.html
+++ b/rezultate.html
@@ -83,7 +83,7 @@
             ></button>
           </div>
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <ul class="navbar-nav justify-content-center flex-grow-1 pe-3">
               <li class = 'nav-item'>
                 <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
                   Limbă
