--- a/blog.html
+++ b/blog.html
@@ -155,9 +155,12 @@
             <span>8-9 august 2025</span>
             <h4 class="blog-title">Robotics for All</h4>
             <p class="text">
-              &emsp;
+              &emsp;În perioada 16-17 august, am avut plăcerea de a participa la evenimentul “Robotics for all”, dedicat 
+              promovării roboticii pentru toate generațiile, evenimentul avand loc in Mega Mall București.
               <span class="read-more-text">
-                <br />&emsp;
+                <br />&emsp;În cele două zile, am avut ocazia să asistăm la meciuri captivante, legand prietenii noi. 
+                Suntem foarte bucurosi ca am participat si le mulțumim echipei <b>Boogeybots #19061</b>, atat pentru invitație, 
+                cat si pentru implicare! 
               </span>
             </p>
             <span class="read-more-btn">Citește mai mult...</span>
