--- a/en/blog.html
+++ b/en/blog.html
@@ -155,9 +155,12 @@
             <span>8-9 august 2025</span>
             <h4 class="blog-title">Robotics for All</h4>
             <p class="text">
-              &emsp;
+              &emsp;During August 16-17, we had the pleasure of participating in the "Robotics for all" event, dedicated to
+              promoting robotics for all generations, the event taking place in Mega Mall Bucharest.
               <span class="read-more-text">
-                <br />&emsp;
+                <br />&emsp;During the two days, we had the opportunity to witness exciting matches, making new friends.
+                We are very happy that we participated and we thank the <b>Boogeybots #19061</b> team, both for the invitation,
+                and for involvement!
               </span>
             </p>
             <span class="read-more-btn">Read more...</span>
