fixed remaining articles
+ minor js fix

--- a/blog.html
+++ b/blog.html
@@ -116,12 +116,16 @@
             <span>8-9 august 2025</span>
             <h4 class="blog-title">Robotics for All</h4>
             <p class="text">
-              &emsp;În perioada 16-17 august, am avut plăcerea de a participa la evenimentul “Robotics for all”, dedicat 
-              promovării roboticii pentru toate generațiile, evenimentul avand loc in Mega Mall București.
+              &emsp;În weekend-ul 16-17 august, Mega Mall București a devenit un loc al inovației și al tehnologiei, 
+              găzduind evenimentul „Robotics for All - MEGA Edition”, organizat de echipa <b>Boogeybots #19061</b>.
               <span class="read-more-text">
-                <br />&emsp;În cele două zile, am avut ocazia să asistăm la meciuri captivante, legand prietenii noi. 
-                Suntem foarte bucurosi ca am participat si le mulțumim echipei <b>Boogeybots #19061</b>, atat pentru invitație, 
-                cat si pentru implicare! 
+                <br />&emsp;În cele două zile pline de entuziasm, pasionați de toate vârstele au avut ocazia să 
+                descopere lumea fascinantă a roboticii și să interacționeze cu roboți realizați de echipele participante 
+                într-o atmosferă palpitantă, luând parte la vizionarea unor meciuri demonstrative care au stârnit 
+                entuziasmul publicului. Tot aici s-au conturat și prietenii noi, pe fondul unei pasiuni comune pentru 
+                domeniul STEM.
+                <br><br>&emsp; Le mulțumim organizatorilor pentru invitație și pentru implicarea acordată în realizarea 
+                unui eveniment memorabil. 
               </span>
             </p>
             <span class="read-more-btn">Citește mai mult...</span>
@@ -240,9 +244,17 @@
             <span>16 iunie 2025</span>
             <h4 class="blog-title">Ziua Porților Deschise</h4>
             <p class="text">
-              &emsp;
+              &emsp; Pe 16 iunie 2025, la Colegiul Național „Grigore Moisil” a avut loc evenimentul „Ziua Porților Deschise”. 
+              Cu această ocazie, elevii de clasa a VIII-a au putut să cunoască mai bine liceul și activitatea clubului nostru, 
+              dar și să afle detalii despre câteva dintre proiectele cu care ne-am remarcat la diferite competiții.
               <span class="read-more-text">
-                
+                <br>&emsp; În timpul turului, am avut ocazia de a prezenta vizitatorilor laboratorul SMART. Acolo, membrii clubului 
+                nostru au prezentat robotul nostru de competiție, roboții FABLE, imprimantele 3D, ochelarii VR și multe alte proiecte. 
+                Mulți dintre vizitatori au fost impresionați de modul în care munca noastră combină creativitatea cu tehnologia, 
+                iar întrebările lor curioase ne-au arătat că interesul pentru robotică este în continuă creștere.
+                <br><br>&emsp; Le mulțumim tuturor celor care ne-au fost alături la acest eveniment și sperăm ca experiența trăită 
+                să îi inspire să ni se alăture pe viitor, transformând „Grigore Moisil” într-un loc unde pasiunea pentru robotică 
+                prinde viață.
               </span>
             </p>
             <span class="read-more-btn">Citește mai mult...</span>
