--- a/en/blog.html
+++ b/en/blog.html
@@ -116,12 +116,15 @@
             <span>8-9 august 2025</span>
             <h4 class="blog-title">Robotics for All</h4>
             <p class="text">
-              &emsp;During August 16-17, we had the pleasure of participating in the "Robotics for all" event, dedicated to
-              promoting robotics for all generations, the event taking place in Mega Mall Bucharest.
+              &emsp;During the weekend of August 16-17, Mega Mall Bucharest became a place of innovation and technology,
+              hosting the "Robotics for All - MEGA Edition" event organized by the <b>Boogeybots #19061</b> team.
               <span class="read-more-text">
-                <br />&emsp;During the two days, we had the opportunity to witness exciting matches, making new friends.
-                We are very happy that we participated and we thank the <b>Boogeybots #19061</b> team, both for the invitation,
-                and for involvement!
+                <br />&emsp;During the two exciting days, enthusiasts of all ages had the opportunity to discover the 
+                fascinating world of robotics and interact with robots made by the participating teams in a thrilling 
+                atmosphere, taking part in watching demonstration matches that aroused the excitement of the audience. 
+                It was also here that new friendships were formed, amid a shared passion for the STEM field.
+                <br><br>&emsp;We thank the organizers for the invitation and for the involvement granted in making 
+                a memorable event.
               </span>
             </p>
             <span class="read-more-btn">Read more...</span>
@@ -234,11 +237,19 @@
           </div>
           <div class="blog-text">
             <span>16 june 2025</span>
-            <h4 class="blog-title">Opened Gates Day</h4>
+            <h4 class="blog-title">The Open Doors Day</h4>
             <p class="text">
-              &emsp;
+              &emsp;On June 16, 2025, the "Open Doors Day" event took place at the "Grigore Moisil" National College. 
+              On this occasion, the 8th grade students were able to get to know the high school and the activity of our 
+              club better, but also to find out details about some of the projects with which we distinguished ourselves 
+              at various competitions.
               <span class="read-more-text">
-                
+                <br>&emsp;During the tour, we had the opportunity to introduce the SMART lab to the visitors. There, our 
+                club members presented the team's competition robot, FABLE robots, 3D printers, VR goggles and other projects. 
+                Many visitors were impressed by how our work combines creativity with technology, and their curious 
+                questions showed us that the interest in robotics is constantly growing.
+                <br><br>&emsp; We thank everyone who joined us for this event and hope that the experience they have had will 
+                inspire them to join us in the future, making "Grigore Moisil" a place where the passion for robotics comes to life.
               </span>
             </p>
             <span class="read-more-btn">Read more...</span>
