fixed missing articles

--- a/blog.html
+++ b/blog.html
@@ -903,9 +903,11 @@
                 intermediul programului Autodesk Fusion, iar, alături de grupa
                 de programare, au reușit, până la finalul celor 2 săptămâni de
                 bootcamp, să proiecteze, să asambleze și să programeze un robot
-                funcțional. <br /><br />&emsp;În final, am simulat atmosfera de
+                funcțional. 
+                <br /><br />&emsp;În final, am simulat atmosfera de
                 concurs printr-o mini-competiție inspirată de tema de joc de
-                acum doi ani, PowerPlay. <br /><br />&emsp;Bootcamp-ul de anul
+                acum doi ani, PowerPlay. 
+                <br /><br />&emsp;Bootcamp-ul de anul
                 acesta a reprezentat o șansă pentru fiecare participant să își
                 dezvolte aptitudinile practice la nivelul roboticii, alături de
                 persoane ce împărtășesc aceeași pasiune.
