added 2 new achievements (missing texts)

--- a/rezultate.html
+++ b/rezultate.html
@@ -244,6 +244,56 @@
       <h5 class="heading">Rezultatele noastre</h5>
       <div class="container-r">
         <ul>
+          <!-- Result 7 -->
+          <li>
+            <div class="timeline-container">
+              <img
+                src="../assets/images/Branding diverse proiecte/Spring Starts with Flowers.png"
+                class="timeline-image"
+              />
+              <div class="timeline-text">
+                <h3 class="title-r">Spring Starts with Flowers</h3>
+                <p>
+                  to be added...
+                </p>
+              </div>
+            </div>
+            <img
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
+              class="point"
+            />
+            <img
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              class="point-2"
+            />
+            <span class="date">Aprilie 2025</span>
+          </li>
+
+          <!-- Result 6 -->
+          <li>
+            <div class="timeline-container">
+              <img
+                src="../assets/images/Branding diverse proiecte/FIRST_DIVE-intothedeep-PatchLogo.webp"
+                class="timeline-image"
+              />
+              <div class="timeline-text">
+                <h3 class="title-r">Regionala FTC #9, 2025</h3>
+                <p>
+                  to be added... 
+                </p>
+              </div>
+            </div>
+            <img
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
+              class="point"
+            />
+            <img
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              class="point-2"
+            />
+            <span class="date">Februarie 2025</span>
+          </li>
+
           <!-- Rezultat 5 -->
           <li>
             <div class="timeline-container">
