solved animation bug on the eng version

--- a/en/index.html
+++ b/en/index.html
@@ -424,7 +424,7 @@
     <script src="../assets/js/nav.js"></script>
     <script src="../assets/js/bttb.js"></script>
     <script src="../assets/js/hexagoane.js"></script>
-    <script src="../assets/js/sovazenith.js"></script>
+    <script src="js/sovazenith.js"></script>
     <script src="js/dark_mode.js"></script>
   </body>
 </html>
