--- a/en/rezultate.html
+++ b/en/rezultate.html
@@ -247,12 +247,12 @@
           <!-- Result 7 -->
           <li>
             <div class="timeline-container">
-              <img
+              <img style = "border-radius: 10px;"
                 src="../assets/images/Branding diverse proiecte/Spring Starts with Flowers.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
-                <h3 class="title-r">Spring Starts with Flowers</h3>
+                <h3 class="title-r">Finalist Alliance Captian</h3>
                 <p>
                   to be added...
                 </p>
@@ -273,11 +273,11 @@
           <li>
             <div class="timeline-container">
               <img
-                src="../assets/images/Branding diverse proiecte/FIRST_DIVE-intothedeep-PatchLogo.webp"
+                src="../assets/images/Branding diverse proiecte/FIRST_DIVE-intothedeep-PatchLogo.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
-                <h3 class="title-r">FTC Regional #9, 2025</h3>
+                <h3 class="title-r">13<sup>th</sup> Place Quals. (5/6 wins)</h3>
                 <p>
                   to be added... 
                 </p>
