--- a/rezultate.html
+++ b/rezultate.html
@@ -248,22 +248,22 @@
           <li>
             <div class="timeline-container">
               <img
-                src="../assets/images/Branding diverse proiecte/Spring Starts with Flowers.png"
+                src="assets/images/Branding diverse proiecte/Spring Starts with Flowers.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
-                <h3 class="title-r">Spring Starts with Flowers</h3>
+                <h3 class="title-r">Finalist Alliance Captian</h3>
                 <p>
                   to be added...
                 </p>
               </div>
             </div>
             <img
-              src="../assets/images/Branding Zenith/Stea_Zenith.png"
+              src="assets/images/Branding Zenith/Stea_Zenith.png"
               class="point"
             />
             <img
-              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
               class="point-2"
             />
             <span class="date">Aprilie 2025</span>
@@ -272,23 +272,23 @@
           <!-- Result 6 -->
           <li>
             <div class="timeline-container">
-              <img
-                src="../assets/images/Branding diverse proiecte/FIRST_DIVE-intothedeep-PatchLogo.webp"
+              <img style = "border-radius: 10px;"
+                src="assets/images/Branding diverse proiecte/FIRST_DIVE-intothedeep-PatchLogo.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
-                <h3 class="title-r">Regionala FTC #9, 2025</h3>
+                <h3 class="title-r">13<sup>th</sup> Place Quals. (5/6 wins)</h3>
                 <p>
                   to be added... 
                 </p>
               </div>
             </div>
             <img
-              src="../assets/images/Branding Zenith/Stea_Zenith.png"
+              src="assets/images/Branding Zenith/Stea_Zenith.png"
               class="point"
             />
             <img
-              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
               class="point-2"
             />
             <span class="date">Februarie 2025</span>
