fixed blurry background for dropdown menus

--- a/en/echipa.html
+++ b/en/echipa.html
@@ -58,6 +58,9 @@
     <!-- Navbar -->
     <div class = 'center-wrapper'>
       <div class = 'nav-wrapper'>
+        <!-- Custom element blur effect for navbar, prevents conflict with effects of children nodes -->
+        <div class = 'navbar-blur-wrapper'></div>
+        
         <div class = 'logo-wrapper'>
           <a href=".">
             <img class="nav-logo" src="../assets/images/Branding Zenith/Sigla_mov.png"/>
