--- a/testtest.html
+++ b/testtest.html
@@ -159,10 +159,10 @@
             </svg>
           </a>
           <div class = 'language-dropdown'>
-            <a class = 'lang-link' onclick = 'changelang("ro", "thank-you.html")'>
+            <a class = 'lang-link' onclick = 'changelang("ro", "index.html")'>
               <img src = 'assets/images/Flags/Flag_RO.svg' alt = 'RO' width = '30px'>
             </a>
-            <a class = 'lang-link' onclick = 'changelang("en", "/en/thank-you.html")'>
+            <a class = 'lang-link' onclick = 'changelang("en", "/en/index.html")'>
               <img src = 'assets/images/Flags/Flag_EN.svg' alt = 'EN' width = '30px'>
             </a>
           </div>
@@ -187,7 +187,7 @@
 
   <!-- Main content -->
   <main class="d-flex justify-content-center align-items-center" style="padding-top: 10em; float: right;">
-      <span class="custom-span">Mulțumim! mesajul tău a fost trimis.</span>
+      <span class="custom-span">Bro cum ai ajuns aici</span>
   </main>
   
   <!-- Footer -->
